--- a/TodoList/package.json
+++ b/TodoList/package.json
@@ -4,19 +4,32 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-firebase/auth": "^19.2.2",
+    "@react-native-google-signin/google-signin": "^11.0.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
+    "@reduxjs/toolkit": "^2.2.3",
+    "eas-cli": "^8.0.0",
     "expo": "~50.0.17",
+    "expo-dev-client": "~3.3.11",
+    "expo-random": "~13.6.0",
     "expo-status-bar": "~1.11.1",
+    "expo-updates": "~0.24.12",
+    "expo-web-browser": "~12.8.2",
+    "firebase": "^10.11.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-firebase": "^5.6.0",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-google-signin": "^2.1.1",
     "react-native-reanimated": "^3.10.0",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
