--- a/TodoList/package.json
+++ b/TodoList/package.json
@@ -9,8 +9,10 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "1.21.0",
+    "@jumpn/react-native-jetifier": "^0.1.4",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-firebase/app": "^19.2.2",
     "@react-native-firebase/auth": "^19.2.2",
     "@react-native-google-signin/google-signin": "^11.0.1",
     "@react-navigation/native": "^6.1.17",
@@ -27,9 +29,7 @@
     "firebase": "^10.11.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
-    "react-native-firebase": "^5.6.0",
     "react-native-gesture-handler": "~2.14.0",
-    "react-native-google-signin": "^2.1.1",
     "react-native-reanimated": "^3.10.0",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
